; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartest.c_IsValidVariantCopyIndVT.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartest.c_IsValidVariantCopyIndVT.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@VT_ARRAY = common dso_local global i64 0, align 8
@VT_NULL = common dso_local global i64 0, align 8
@VT_VOID = common dso_local global i64 0, align 8
@VT_VECTOR = common dso_local global i64 0, align 8
@VT_RESERVED = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64)* @IsValidVariantCopyIndVT to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @IsValidVariantCopyIndVT(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i32, i32* @FALSE, align 4
  store i32 %6, i32* %5, align 4
  %7 = load i64, i64* %4, align 8
  %8 = load i64, i64* @VT_ARRAY, align 8
  %9 = and i64 %7, %8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %29, label %11

11:                                               ; preds = %2
  %12 = load i64, i64* %3, align 8
  %13 = load i64, i64* @VT_NULL, align 8
  %14 = icmp sgt i64 %12, %13
  br i1 %14, label %15, label %31

15:                                               ; preds = %11
  %16 = load i64, i64* %3, align 8
  %17 = icmp ne i64 %16, 15
  br i1 %17, label %18, label %31

18:                                               ; preds = %15
  %19 = load i64, i64* %3, align 8
  %20 = load i64, i64* @VT_VOID, align 8
  %21 = icmp slt i64 %19, %20
  br i1 %21, label %22, label %31

22:                                               ; preds = %18
  %23 = load i64, i64* %4, align 8
  %24 = load i64, i64* @VT_VECTOR, align 8
  %25 = load i64, i64* @VT_RESERVED, align 8
  %26 = or i64 %24, %25
  %27 = and i64 %23, %26
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %31, label %29

29:                                               ; preds = %22, %2
  %30 = load i32, i32* @TRUE, align 4
  store i32 %30, i32* %5, align 4
  br label %31

31:                                               ; preds = %29, %22, %18, %15, %11
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
